--- a/Movil/MiPrimeraApp/app/src/main/res/layout/activity_menu.xml
+++ b/Movil/MiPrimeraApp/app/src/main/res/layout/activity_menu.xml
@@ -4,13 +4,58 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#4E6A32"
     tools:context=".Menu">
 
-    <TextView
-        android:id="@+id/textView"
+    <LinearLayout
+        android:id="@+id/barra"
+        android:layout_width="105dp"
+        android:layout_height="723dp"
+        android:background="#FBFBFB"
+        android:orientation="horizontal"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="1dp"/>
+
+    <Button
+        android:id="@+id/buttonCalculadora"
+        android:layout_width="222dp"
+        android:layout_height="110dp"
+        android:text="Calculadora"
+        android:textSize="20sp"
+        tools:layout_editor_absoluteX="68dp"
+        tools:layout_editor_absoluteY="112dp" />
+
+    <Button
+        android:id="@+id/buttonBanco"
+        android:layout_width="222dp"
+        android:layout_height="110dp"
+        android:text="Banco"
+        android:textSize="20sp"
+        tools:layout_editor_absoluteX="68dp"
+        tools:layout_editor_absoluteY="310dp" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="222dp"
+        android:layout_height="110dp"
+        android:text="Button"
+        tools:layout_editor_absoluteX="68dp"
+        tools:layout_editor_absoluteY="512dp" />
+
+    <ImageView
+        android:id="@+id/imageView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="72dp" />
+        app:srcCompat="@mipmap/calculadora"
+        tools:layout_editor_absoluteX="270dp"
+        tools:layout_editor_absoluteY="89dp" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="122dp"
+        android:layout_height="128dp"
+        app:srcCompat="@mipmap/banco"
+        tools:layout_editor_absoluteX="269dp"
+        tools:layout_editor_absoluteY="300dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
